test/fail/integration/_fail_grammar_expr_mod_2.hs
x :: Int
x = mod 4 jl
main = print "hello"